Fix Client Error

--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "format": "prettier --write .",
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
-    "next": "16.1.0",
+    "@clerk/nextjs": "^6.36.5",
+    "@prisma/client": "^6.19.1",
+    "next": "^16.1.0",
+    "prettier": "^3.7.4",
+    "prisma": "^6.19.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -21,7 +25,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
-    "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
