--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
+    "@clerk/themes": "^2.4.46",
     "@prisma/client": "^6.19.1",
     "next": "^16.1.0",
+    "openai": "^6.15.0",
     "prettier": "^3.7.4",
     "prisma": "^6.19.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
     "tailwindcss": "^4",
