Add expense Chart

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@clerk/nextjs": "^6.36.5",
     "@clerk/themes": "^2.4.46",
     "@prisma/client": "^6.19.1",
+    "chart.js": "^4.5.1",
     "next": "^16.1.0",
     "openai": "^6.15.0",
     "prettier": "^3.7.4",
     "prisma": "^6.19.1",
     "react": "19.2.3",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
